<resources>
    <string name="app_name">Fasthub</string>
    <string name="search">Search</string>
    <string name="search_hint">Search a repo&#8230;</string>
    <string name="header_project_link">Project Link</string>
    <string name="header_description">Description</string>
    <string name="header_contributor">Contributors</string>
    <string name="repository_list">Repository List</string>
    <string name="project_details">Project Details</string>
    <string name="repo_details">Repo Details</string>
    <string name="contributor_details">Contributor Details</string>
    <string name="no_results_found_error">No repos found for this keyword</string>
    <string name="no_repos_found_error">No repos found for this contributor</string>
    <string name="no_contributors_found_error">No contributors found for this repo</string>
    <string name="filter_button_label">Filter</string>
    <string name="sort_button_label">Sort</string>
    <string name="sort_layout_header">SORT BY</string>
    <string name="filter_layout_header">FILTER BY</string>
    <string name="radio_button_watchers_asc">Watchers &#8212; Low to High</string>
    <string name="radio_button_watchers_desc">Watchers &#8212; High to Low</string>
    <string name="radio_button_forks_asc">Forks &#8212; Low to High</string>
    <string name="radio_button_forks_desc">Forks &#8212; High to Low</string>
    <string name="radio_button_stars_asc">Stars &#8212; Low to High</string>
    <string name="radio_button_stars_desc">Stars &#8212; High to Low</string>

</resources>
